--- a/configs/centralized.yaml
+++ b/configs/centralized.yaml
@@ -1,7 +1,8 @@
-batch_size: 128
-epochs: 100
+batch_size: 64
 lr: 0.03
+epochs: 200
+momentum: 0.9
 weight_decay: 0.0005
-checkpoint_path: ./checkpoints/centralized.pth
-resume_path: null
-log_path: ./logs/centralized_log.json
+scheduler: "cosine"
+checkpoint_path: "./checkpoints/centralized_cosine.pth"
+log_path: "./logs/centralized_cosine.json"
