--- a/configs/centralized_step.yaml
+++ b/configs/centralized_step.yaml
@@ -1,5 +1,5 @@
 batch_size: 64
-lr: 0.03
+lr: 0.01
 epochs: 10
 momentum: 0.9
 weight_decay: 0.0005
@@ -8,3 +8,5 @@ step_size: 60
 gamma: 0.1
 checkpoint_path: "./checkpoints/centralized_step.pth"
 log_path: "./logs/centralized_step.json"
+checkpoint_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_step.pth"
+log_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_step.json"
