--- a/configs/centralized_step.yaml
+++ b/configs/centralized_step.yaml
@@ -8,5 +8,8 @@ step_size: 3
 gamma: 0.1
 checkpoint_path: "./checkpoints/centralized_step.pth"
 log_path: "./logs/centralized_step.json"
-checkpoint_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_step.pth"
-log_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_step.json"
+checkpoint_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_step_1.pth"
+log_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_step_1.json"
+early_stopping_patience: 3
+best_model_path: "./checkpoints/best_model_centralized_step_1.pth"
+best_model_drive_path: "/content/drive/MyDrive/mldl_checkpoints/best_model_centralized_step_1.pth"
