--- a/configs/centralized_cosine_1.yaml
+++ b/configs/centralized_cosine_1.yaml
@@ -8,3 +8,6 @@ checkpoint_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_cosi
 checkpoint_path: "./checkpoints/centralized_cosine_1.pth"
 log_path: "./logs/centralized_cosine_1.json"
 log_drive_path: "/content/drive/MyDrive/mldl_checkpoints/centralized_cosine_1.json"
+early_stopping_patience: 3
+best_model_path: "./checkpoints/best_model_centralized_cosine_1.pth"
+best_model_drive_path: "/content/drive/MyDrive/mldl_checkpoints/best_model_centralized_cosine_1.pth"
