--- a/configs/centralized_sparse_1.yaml
+++ b/configs/centralized_sparse_1.yaml
@@ -4,7 +4,8 @@ epochs: 20
 lr: 0.01
 weight_decay: 0.0005
 early_stopping_patience: 3
-sparsity_ratio: 0.5  
+sparsity_ratio: 0.5
+calibration_rounds: 3
 mask_calibration_rule: sensitivity_least  #or sensitivity_most, magnitude_highest, magnitude_lowest, random
 checkpoint_path: ./checkpoints/centralized_sparse_1.pth
 checkpoint_drive_path: /content/drive/MyDrive/mldl_checkpoints//centralized_sparse_1.pth
