--- a/configs/centralized_sparse_2.yaml
+++ b/configs/centralized_sparse_2.yaml
@@ -5,6 +5,7 @@ lr: 0.01
 weight_decay: 0.0005
 early_stopping_patience: 3
 sparsity_ratio: 0.7  
+calibration_rounds: 3
 mask_calibration_rule: sensitivity_least   #or sensitivity_least, magnitude_highest, magnitude_lowest, random
 checkpoint_path: ./checkpoints/centralized_sparse_2.pth
 checkpoint_drive_path: ./drive_backup/centralized_sparse_2.pth
