--- a/configs/federated_sparse_idd_1.yaml
+++ b/configs/federated_sparse_idd_1.yaml
@@ -9,7 +9,7 @@ calibration_rounds: 10
 mask_calibration_rule: "sensitivity_least"
 sparsity_ratio: 0.5
 save_every: 10  
-checkpoint_path: "./checkpoints/federated/ckpt.pth"
-log_path: "./logs/federated/metrics.json"
-checkpoint_drive_path: "/content/drive/MyDrive/checkpoints/federated/ckpt.pth"
-log_drive_path: "/content/drive/MyDrive/logs/federated/metrics.json"
+checkpoint_path: "./checkpoints/federated_sparse_idd_1.pth"
+log_path: "./logs/federated_sparse_idd_1.json"
+checkpoint_drive_path: "content/drive/MyDrive/mldl_checkpoints/federated_sparse_idd_1.pth"
+log_drive_path: "content/drive/MyDrive/mldl_checkpoints/federated_sparse_idd_1.json"
