--- a/configs/federated_sparse_idd_1.yaml
+++ b/configs/federated_sparse_idd_1.yaml
@@ -5,7 +5,7 @@ rounds: 100
 sharding: "iid"
 lr: 0.01                
 batch_size: 32          
-calibration_rounds: 10
+calibration_interval: 10
 mask_calibration_rule: "sensitivity_least"
 sparsity_ratio: 0.5
 save_every: 10  
