--- a/configs/centralized_sparse_most.yaml
+++ b/configs/centralized_sparse_most.yaml
@@ -8,6 +8,6 @@ calibration_rounds: 3
 sparsity_ratio: 0.5  
 mask_calibration_rule: sensitivity_most   #or sensitivity_least, magnitude_highest, magnitude_lowest, random
 checkpoint_path: ./checkpoints/centralized_sparse_most.pth
-checkpoint_drive_path: ./drive_backup/centralized_sparse_most.pth
+checkpoint_drive_path: /content/drive/MyDrive/mldl_checkpoints/centralized_sparse_most.pth
 log_path: ./logs/centralized_sparse_most.json
-log_drive_path: ./drive_backup/logs/centralized_sparse_most.json
+log_drive_path: /content/drive/MyDrive/mldl_checkpoints/centralized_sparse_most.json
