--- a/configs/federated_sparse_idd_2.yaml
+++ b/configs/federated_sparse_idd_2.yaml
@@ -5,8 +5,8 @@ rounds: 100
 sharding: "iid"
 lr: 0.01                
 batch_size: 32          
-calibration_interval: 10
-mask_calibration_rule: "sensitivity_most" #options: "sensitivity_least", "magnitude_highest", "magnitude_lowest", "random"
+calibration_rounds: 10
+mask_calibration_rule: "sensitivity_least" #options: "sensitivity_most", "magnitude_highest", "magnitude_lowest", "random"
 sparsity_ratio: 0.5
 save_every: 10  
 checkpoint_path: "./checkpoints/federated_sparse_idd_2.pth"
